Fix T81421: "Saving As..." a blend file with a Script node file path filled with 1023 symbols crashes Blender.

Usual lack of protection against buffer overflows when manipulating
strings.

Also add some basic tests for `BLI_path_rel`.